--- a/my_weather_app/pubspec.yaml
+++ b/my_weather_app/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   http: ^1.1.0
   flutter:
     sdk: flutter
+  get_it: ^7.1.3
 
 
   # The following adds the Cupertino Icons font to your application.
